2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawHorizontalItem): Draw box outline using itemOutlinePaint/Stroke,
    (drawVerticalItem): Likewise,
    * source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
    (lookupBoxPaint): New method,
    (drawHorizontalItem): Do lookup for box fill paint,
    (drawVerticalItem): Likewise.

2008-03-26  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1918209:
    * source/org/jfree/chart/axis/LogAxis.java
    (createTickLabel): Changed from private to protected.

2008-03-25  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java
    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java
    * source/org/jfree/chart/plot/CombinedRangeCategoryPlot.java
    * source/org/jfree/chart/plot/CombinedRangeXYPlot.java
    * source/org/jfree/chart/plot/CompassPlot.java
    * source/org/jfree/chart/plot/ContourPlot.java
    * source/org/jfree/chart/plot/MeterPlot.java
    * source/org/jfree/chart/plot/MultiplePiePlot.java
    * source/org/jfree/chart/plot/PiePlot.java
    * source/org/jfree/chart/plot/PiePlot3D.java
    * source/org/jfree/chart/plot/PolarPlot.java
    * source/org/jfree/chart/plot/RingPlot.java
    * source/org/jfree/chart/plot/SpiderWebPlot.java
    * source/org/jfree/chart/plot/ThermometerPlot.java
    * source/org/jfree/chart/plot/WaferMapPlot.java
    Use fireChangeEvent() method all over.

2008-03-25  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1914411:
    * source/org/jfree/chart/plot/Plot.java
    (fireChangeEvent): New method,
    * source/org/jfree/chart/plot/CategoryPlot.java
    * source/org/jfree/chart/plot/FastScatterPlot.java
    * source/org/jfree/chart/plot/XYPlot.java:
    Use fireChangeEvent() method all over.

2008-03-25  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1913751: